# fips-hello-dep-proton

./: CMakeLists.txt  fips.yml
lib/emsc/: libqpid-proton.so.bc.11.0.0
src/dep-proton/: CMakeLists.txt  dep-proton.c  dep-proton.h
src/recv/: CMakeLists.txt  main.c
src/send/: CMakeLists.txt  main.c
